a box of buttons

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<head>
+<link rel="stylesheet" type="text/css" href="styles/index.css">
+</head>
+<div class="menu-container">
+    <div class="button-container">
+       <a href="#/Action1" class="button">Action1</a>
+       <a href="#/Action2" class="button">Action2</a>
+       <a href="#/Action3" class="button">Action3</a>
+       <a href="#/Action4" class="button">Action4</a>
+       <a href="#/Action5" class="button">Action5</a>
+    </div>
+</div>
