a box of buttons

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
        <a href="#/Action3" class="button">Action3</a>
        <a href="#/Action4" class="button">Action4</a>
        <a href="#/Action5" class="button">Action5</a>
+       <a href="#/Action6" class="button">Action3</a>
+       <a href="#/Action7" class="button">Action4</a>
+       <a href="#/Action8" class="button">Action5</a>
     </div>
 </div>
