--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html>
+<html>
+
 <head>
 <link rel="stylesheet" type="text/css" href="styles/index.css">
+<title>Zach Sherin's Personal Page</title>
 </head>
+<body>
+<div class="header-menu">
+    <div class="header-button">Button 1</div>
+    <div class="header-button">Button 2</div>
+    <div class="header-button">Button 3</div>
+    <div class="header-button">Button 4</div>
+</div>​
+
+</br>
 <div class="menu-container">
     <div class="button-container">
        <a href="#/Action1" class="button">Action1</a>
@@ -13,3 +26,5 @@
        <a href="#/Action8" class="button">Action5</a>
     </div>
 </div>
+</body>
+</html>
