--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html>
 
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="styles/index.css">
 <title>Zach Sherin's Personal Page</title>
+
+<script>
+$(document).ready(function(){
+    $(.button).mouseenter(function()
+	{
+		$(this).hide();
+	});
+	$(.button).mouseleave(function()
+	{
+		$(this).show();
+	}
+});
+</script>
 </head>
 <body>
 <div class="header-menu">
-    <div class="header-button">Button 1</div>
-    <div class="header-button">Button 2</div>
-    <div class="header-button">Button 3</div>
-    <div class="header-button">Button 4</div>
+    <a href="#/Action1" class="header-button">Button 1</a>
+    <a href="#/Action1" class="header-button">Button 2</a>
+    <a href="#/Action1" class="header-button">Button 3</a>
+    <a href="#/Action1" class="header-button">Button 4</a>
 </div>​
 
 </br>
