New website design. Lots of changes. Making sure it doesn't disappear forever.

--- a/index.html
+++ b/index.html
@@ -3,42 +3,55 @@
 
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="index.js"></script>
 <link rel="stylesheet" type="text/css" href="styles/index.css">
 <title>Zach Sherin's Personal Page</title>
 
-<script>
-$(document).ready(function(){
-    $(.button).mouseenter(function()
-	{
-		$(this).hide();
-	});
-	$(.button).mouseleave(function()
-	{
-		$(this).show();
-	}
-});
-</script>
-</head>
-<body>
-<div class="header-menu">
-    <a href="#/Action1" class="header-button">Button 1</a>
-    <a href="#/Action1" class="header-button">Button 2</a>
-    <a href="#/Action1" class="header-button">Button 3</a>
-    <a href="#/Action1" class="header-button">Button 4</a>
-</div>​
 
-</br>
-<div class="menu-container">
-    <div class="button-container">
-       <a href="#/Action1" class="button">Action1</a>
-       <a href="#/Action2" class="button">Action2</a>
-       <a href="#/Action3" class="button">Action3</a>
-       <a href="#/Action4" class="button">Action4</a>
-       <a href="#/Action5" class="button">Action5</a>
-       <a href="#/Action6" class="button">Action3</a>
-       <a href="#/Action7" class="button">Action4</a>
-       <a href="#/Action8" class="button">Action5</a>
-    </div>
-</div>
+</head>
+
+<body>
+	
+	<div class="content-container">
+		<div id="header">
+        	<h1>Zach Sherin</h1>
+            <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite projects I've worked on.</h2>
+      </div>
+		</br>
+		<div class="header-menu">
+			<a href="#/Action1" class="header-button">Professional</a>
+			<a href="#/Action1" class="header-button">School</a>
+			<a href="#/Action1" class="header-button">Personal</a>
+		</div>​
+
+		</br>
+		<div class="menu-container">
+			<div class="button-container">
+				<div class="square bg" index =1>
+					<div class="content">.
+					</div>
+				</div>
+				<div class="square bg" index=2>
+					<div class="content">
+					</div>
+				</div>
+				<div class="square bg" index =3>
+					<div class="content">
+					</div>
+				</div>
+				<div class="square bg"index =4>
+					<div class="content">
+					</div>
+				</div>
+				<div class="square bg" index =5>
+					<div class="content">
+					</div>
+				</div>
+			</div>
+			<div class="text-header"></div>
+			</br>
+			<div class="texter"></div>
+		</div>
+	</div>
 </body>
 </html>
