adding pleading WIP message in case anyone thinks this is finished

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="index.js"></script>
 <link rel="stylesheet" type="text/css" href="styles/index.css">
-<title>Zach Sherin's Personal Page</title>
+<title>WORK IN PROGRESS PAGE</title>
 
 
 </head>
@@ -15,7 +15,7 @@
 	<div class="content-container">
 		<div id="header">
         	<h1>Zach Sherin</h1>
-            <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite projects I've worked on.</h2>
+            <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite projects I've worked on. This page is a major work in progress, so it's doubtful much is here. Please be forgiving for how long it takes me to finish working on it.</h2>
       </div>
 		</br>
 		<div class="header-menu">
