added background. Gonna change this

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite projects I've worked on. This page is a major work in progress, so it's doubtful much is here. Please be forgiving for how long it takes me to finish working on it.</h2>
       </div>
 		</br>
+		<!-- Removing this until I have enough content to justify different sortings
 		<div class="header-menu">
 			<a href="#/Action1" class="header-button">Professional</a>
 			<a href="#/Action1" class="header-button">School</a>
 			<a href="#/Action1" class="header-button">Personal</a>
 		</div>​
-
+		-->
 		</br>
 		<div class="menu-container">
 			<div class="button-container">
