--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 		</br>
 		<div class="menu-container">
 			<div class="button-container">
+			<div class="square bg" index =0>
+					<div class="content">
+					</div>
+				</div>
 				<div class="square bg" index =1>
-					<div class="content">.
+					<div class="content" >
 					</div>
 				</div>
 				<div class="square bg" index=2>
@@ -48,10 +52,17 @@
 					<div class="content">
 					</div>
 				</div>
+				<div class="square bg" index =6>
+					<div class="content">
+					</div>
+				</div>
 			</div>
 			<div class="text-header"></div>
 			</br>
 			<div class="texter"></div>
+			</br>
+			</br>
+			</br>
 		</div>
 	</div>
 </body>
