Content for all the pages except mine! Hoorah.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<div class="content-container">
 		<div id="header">
         	<h1>Zach Sherin</h1>
-            <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite projects I've worked on. This page is a major work in progress, so it's doubtful much is here. Please be forgiving for how long it takes me to finish working on it.</h2>
+			<h3>Contact: zarrro45@gmail.com</h3>
+            <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite projects I've worked on. </h2>
       </div>
 		</br>
 		<!-- Removing this until I have enough content to justify different sortings
@@ -33,28 +34,28 @@
 					</div>
 				</div>
 				<div class="square bg" index =1>
-					<div class="content" >
-					</div>
+					<a class="content" href="pages/slower.html">
+					</a>
 				</div>
 				<div class="square bg" index=2>
-					<div class="content">
-					</div>
+					<a class="content" href="pages/mars.html">
+					</a>
 				</div>
 				<div class="square bg" index =3>
-					<div class="content">
-					</div>
+					<a class="content" href="pages/dome.html">
+					</a>
 				</div>
 				<div class="square bg"index =4>
-					<div class="content">
-					</div>
+					<a class="content" href="pages/sidekick.html">
+					</a>
 				</div>
 				<div class="square bg" index =5>
-					<div class="content">
-					</div>
+					<a class="content" href="pages/finite.html">
+					</a>
 				</div>
 				<div class="square bg" index =6>
-					<div class="content">
-					</div>
+					<a class="content" href="pages/vrmfa.html">
+					</a>
 				</div>
 			</div>
 			<div class="text-header"></div>
