Pushing resume for placeholder on my personal page.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<div class="menu-container">
 			<div class="button-container">
 			<div class="square bg" index =0>
-					<div class="content">
-					</div>
+					<a class="content" href="pages/resume.pdf">
+					</a>
 				</div>
 				<div class="square bg" index =1>
 					<a class="content" href="pages/slower.html">
