small file changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="header">
         	<h1>Zach Sherin</h1>
 			<h3>Contact: zarrro45@gmail.com</h3>
-            <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite projects I've worked on. </h2>
+            <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite previous projects. </h2>
       </div>
 		</br>
 		<!-- Removing this until I have enough content to justify different sortings
