--- a/pages/sidekick.html
+++ b/pages/sidekick.html
@@ -22,11 +22,10 @@
       </div>
 		<p class="paragraph">
 			Another project from the Opslab. The public information about it is again available on<a href="http://opslab.jpl.nasa.gov/"> their website</a>. However, to save you time, I've copied the short press blurb below, and a nice descriptive video above:</br>
-			Sidekick, the project to put the Microsoft HoloLens onboard the ISS, is designed to empower the crew with assistance when and where they need it. The goal of the Sidekick project is to increase ISS utilization and scientific return by accelerating crew activities.
-
-
 		</p>
-		<p class= "paragraph">
+		<p class="quote">
+			Sidekick, the project to put the Microsoft HoloLens onboard the ISS, is designed to empower the crew with assistance when and where they need it. The goal of the Sidekick project is to increase ISS utilization and scientific return by accelerating crew activities.
+</br>
 			There are two modes of operation. The first is “Remote Expert Mode”, in which a ground operator can make a special Skype call that enables them to see what the crew sees and draw annotations into the crew’s environment in order to coach them through a task. Second is “Procedure Mode”, a standalone capability in which ISS procedures are augmented with animated holographic illustrations that are displayed on top of the objects that the crew is being asked to interact with. We expect to develop additional applications for Sidekick and deploy additional applications from Microsoft as well.		</p>
 	</div>
 </body>
