--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="index.js"></script>
 <link rel="stylesheet" type="text/css" href="styles/index.css">
-<title>WORK IN PROGRESS PAGE</title>
+<title>Zach Sherin's Personal Page</title>
 
 
 </head>
