pushing changes to help with phone screens

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<h3>Contact: zarrro45@gmail.com</h3>
             <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite previous projects. </h2>
       </div>
+		<h3 id="headsup">(Touch once to show a blurb, and twice to see the project page)</h3>
 		</br>
 		<!-- Removing this until I have enough content to justify different sortings
 		<div class="header-menu">
