making mobile a little better

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h3>Contact: zarrro45@gmail.com</h3>
             <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite previous projects. </h2>
       </div>
-		<h3 id="headsup">(Touch once to show a blurb, and twice to see the project page)</h3>
+		<h4 id="headsup">(Touch once to show blurb, once for the project page)</h4>
 		</br>
 		<!-- Removing this until I have enough content to justify different sortings
 		<div class="header-menu">
@@ -31,31 +31,31 @@
 		<div class="menu-container">
 			<div class="button-container">
 			<div class="square bg" index =0>
-					<a class="content" href="pages/resume.pdf">
+					<a class="content" id="content-0" href="pages/resume.pdf">
 					</a>
 				</div>
 				<div class="square bg" index =1>
-					<a class="content" href="pages/slower.html">
+					<a class="content" id ="content-1" href="pages/slower.html">
 					</a>
 				</div>
 				<div class="square bg" index=2>
-					<a class="content" href="pages/mars.html">
+					<a class="content" id ="content-2" href="pages/mars.html">
 					</a>
 				</div>
 				<div class="square bg" index =3>
-					<a class="content" href="pages/dome.html">
+					<a class="content" id ="content-3" href="pages/dome.html">
 					</a>
 				</div>
 				<div class="square bg"index =4>
-					<a class="content" href="pages/sidekick.html">
+					<a class="content" id ="content-4" href="pages/sidekick.html">
 					</a>
 				</div>
 				<div class="square bg" index =5>
-					<a class="content" href="pages/finite.html">
+					<a class="content" id ="content-5" href="pages/finite.html">
 					</a>
 				</div>
 				<div class="square bg" index =6>
-					<a class="content" href="pages/vrmfa.html">
+					<a class="content" id ="content-6" href="pages/vrmfa.html">
 					</a>
 				</div>
 			</div>
