updated color scheme, hopefully to be less eye-searing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="content-container">
 		<div id="header">
         	<h1>Zach Sherin</h1>
-			<h3>Contact: zarrro45@gmail.com</h3>
+			<h3>Contact: zachary.sherin@gmail.com</h3>
             <h2>I'm a software developer and electrical engineer with a particular love of virtual reality and games work. Below are some of my favorite previous projects. </h2>
       </div>
 		<h4 id="headsup">(Touch once to show blurb, once more for the project page)</h4>
