--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="menu-container">
 			<div class="button-container">
 			<div class="square bg" index =0>
-					<a class="content" id="content-0" href="pages/resume.pdf">
+					<a class="content" id="content-0" href="pages/ZachSherinResume.pdf">
 					</a>
 				</div>
 				<div class="square bg" index =1>
